--- a/HSE_transport_manager/HSE_transport_manager.csproj
+++ b/HSE_transport_manager/HSE_transport_manager.csproj
@@ -126,11 +126,11 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="WpfMessageProvider.cs" />
-    <Page Include="Resources\Icons.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="Resources\Dictionary.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Resources\PictureDictionary.xaml">
+    <Page Include="Resources\Icons.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
